Mitad de Proyecto

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,80 +4,82 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFC107"
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textViewForm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
-        android:text="Examen de Admisión 2024:"
+        android:background="#3F51B5"
+        android:text="@string/textviewForm"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textViewApellido"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Apellidos y Nombres"
-        app:layout_constraintStart_toStartOf="@+id/textView8"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        android:text="@string/textviewApellido"
+        app:layout_constraintStart_toStartOf="@+id/textViewComent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewComent" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textViewCorreo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Correo Electrónico"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        android:text="@string/textviewCorreo"
+        app:layout_constraintStart_toStartOf="@+id/textViewApellido"
+        app:layout_constraintTop_toBottomOf="@+id/textViewApellido" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textViewClave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Clave"
-        app:layout_constraintStart_toStartOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        android:text="@string/textviewClave"
+        app:layout_constraintStart_toStartOf="@+id/textViewCorreo"
+        app:layout_constraintTop_toBottomOf="@+id/textViewCorreo" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/textViewFecha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Fecha de Nacimiento"
-        app:layout_constraintStart_toStartOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        android:text="@string/textviewFecha"
+        app:layout_constraintStart_toStartOf="@+id/textViewClave"
+        app:layout_constraintTop_toBottomOf="@+id/textViewClave" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/textViewCarrera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Carrera"
-        app:layout_constraintStart_toStartOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        android:text="@string/textviewCarrera"
+        app:layout_constraintStart_toStartOf="@+id/textViewFecha"
+        app:layout_constraintTop_toBottomOf="@+id/textViewFecha" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/textViewPregunta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="210dp"
-        android:text="¿Por qué medio se enteró de la convocatoria?"
-        app:layout_constraintStart_toStartOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        android:layout_marginTop="190dp"
+        android:text="@string/textviewPregunta"
+        app:layout_constraintStart_toStartOf="@+id/textViewCarrera"
+        app:layout_constraintTop_toBottomOf="@+id/textViewCarrera" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/textViewComent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
-        android:text="Formulario de Registro"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        android:text="@string/textviewComent"
+        app:layout_constraintStart_toStartOf="@+id/textViewForm"
+        app:layout_constraintTop_toBottomOf="@+id/textViewForm" />
 
     <EditText
         android:id="@+id/editTextTextPersonName"
@@ -86,9 +88,9 @@
         android:layout_marginStart="24dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="@+id/textView2"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toTopOf="@+id/textView2" />
+        app:layout_constraintBottom_toBottomOf="@+id/textViewApellido"
+        app:layout_constraintStart_toEndOf="@+id/textViewApellido"
+        app:layout_constraintTop_toTopOf="@+id/textViewApellido" />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
@@ -97,9 +99,9 @@
         android:layout_marginStart="24dp"
         android:ems="10"
         android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toBottomOf="@+id/textView3"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toTopOf="@+id/textView3" />
+        app:layout_constraintBottom_toBottomOf="@+id/textViewCorreo"
+        app:layout_constraintStart_toEndOf="@+id/textViewCorreo"
+        app:layout_constraintTop_toTopOf="@+id/textViewCorreo" />
 
     <EditText
         android:id="@+id/editTextTextPassword"
@@ -108,9 +110,9 @@
         android:layout_marginStart="24dp"
         android:ems="10"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toBottomOf="@+id/textView4"
-        app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toTopOf="@+id/textView4" />
+        app:layout_constraintBottom_toBottomOf="@+id/textViewClave"
+        app:layout_constraintStart_toEndOf="@+id/textViewClave"
+        app:layout_constraintTop_toTopOf="@+id/textViewClave" />
 
     <EditText
         android:id="@+id/editTextDate"
@@ -119,16 +121,15 @@
         android:layout_marginStart="24dp"
         android:ems="10"
         android:inputType="date"
-        app:layout_constraintBottom_toBottomOf="@+id/textView5"
-        app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toTopOf="@+id/textView5" />
+        app:layout_constraintBottom_toBottomOf="@+id/textViewFecha"
+        app:layout_constraintStart_toEndOf="@+id/textViewFecha"
+        app:layout_constraintTop_toTopOf="@+id/textViewFecha" />
 
     <RadioGroup
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
-        app:layout_constraintStart_toStartOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/textView6">
+        app:layout_constraintStart_toStartOf="@+id/textViewCarrera"
+        app:layout_constraintTop_toBottomOf="@+id/textViewCarrera">
 
         <RadioButton
             android:id="@+id/radioButtonSistemas"
@@ -156,34 +157,48 @@
     </RadioGroup>
 
     <CheckBox
-        android:id="@+id/checkBox"
+        android:id="@+id/checkBoxRadio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CheckBox"
-        app:layout_constraintStart_toStartOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        android:text="@string/checkboxRadio"
+        app:layout_constraintStart_toStartOf="@+id/textViewPregunta"
+        app:layout_constraintTop_toBottomOf="@+id/textViewPregunta" />
 
     <CheckBox
-        android:id="@+id/checkBox2"
+        android:id="@+id/checkBoxInternet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CheckBox"
-        app:layout_constraintStart_toStartOf="@+id/checkBox"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox" />
+        android:text="@string/checkboxInternet"
+        app:layout_constraintStart_toStartOf="@+id/checkBoxRadio"
+        app:layout_constraintTop_toBottomOf="@+id/checkBoxRadio" />
 
     <CheckBox
-        android:id="@+id/checkBox3"
+        android:id="@+id/checkBoxAmigo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CheckBox"
-        app:layout_constraintStart_toStartOf="@+id/checkBox2"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />
+        android:text="@string/checkboxAmigo"
+        app:layout_constraintStart_toStartOf="@+id/checkBoxInternet"
+        app:layout_constraintTop_toBottomOf="@+id/checkBoxInternet" />
 
     <CheckBox
-        android:id="@+id/checkBox4"
+        android:id="@+id/checkBoxPublicidad"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CheckBox"
-        app:layout_constraintStart_toStartOf="@+id/checkBox3"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />
+        android:text="@string/checkboxPublicidad"
+        app:layout_constraintStart_toStartOf="@+id/checkBoxAmigo"
+        app:layout_constraintTop_toBottomOf="@+id/checkBoxAmigo" />
+
+    <Button
+        android:id="@+id/ButtonEnviar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="130dp"
+        android:background="#3F51B5"
+        android:backgroundTint="#3F51B5"
+        android:drawableLeft="@drawable/baseline_backup_24"
+        android:text="@string/buttonEnviar"
+        app:layout_constraintBottom_toBottomOf="@+id/checkBoxPublicidad"
+        app:layout_constraintStart_toEndOf="@+id/checkBoxPublicidad"
+        app:layout_constraintTop_toTopOf="@+id/checkBoxPublicidad"
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
